# dpp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/docs/: ARCHITECTURE.md  DEVELOPMENT.md
.github/workflows/: publish.yml
apfs/: CHANGELOG.md  Cargo.toml  README.md
apfs/benches/: parse_benchmark.rs
apfs/src/: btree.rs  catalog.rs  extents.rs  fletcher.rs  lib.rs  object.rs  omap.rs  superblock.rs
dpp/: CHANGELOG.md  Cargo.toml  README.md
dpp-tool/: CHANGELOG.md  Cargo.toml  README.md
dpp-tool/src/: cmd_apfs.rs  cmd_bench.rs  cmd_dmg.rs  cmd_fs.rs  cmd_hfs.rs  cmd_info.rs  cmd_payload.rs  cmd_pkg.rs  main.rs  pipeline.rs  style.rs
dpp/docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md
dpp/src/: error.rs  lib.rs  pipeline.rs
hfsplus/: CHANGELOG.md  Cargo.toml  README.md
hfsplus/docs/: FORMATS.md  IMPLEMENTATION.md
hfsplus/src/: btree.rs  catalog.rs  error.rs  extents.rs  lib.rs  unicode.rs  volume.rs
pbzx/: CHANGELOG.md  Cargo.toml  README.md
pbzx/docs/: BENCHMARKS.md  CLI.md  FORMATS.md
pbzx/examples/: cpio-compare.rs  pbzx-tool.rs
pbzx/src/: cpio.rs  error.rs  format.rs  lib.rs  reader.rs  writer.rs
udif/: CHANGELOG.md  Cargo.toml  README.md
udif/docs/: CLI.md  COMPARISON.md  FORMATS.md  IMPLEMENTATION.md
udif/examples/: udif-tool.rs
udif/src/: checksum.rs  error.rs  format.rs  lib.rs  reader.rs  writer.rs
xara/: CHANGELOG.md  Cargo.toml  README.md
xara/docs/: CLI.md  FORMATS.md
xara/src/: error.rs  header.rs  heap.rs  lib.rs  pkg.rs  toc.rs
