[package]
name = "dpp"
version = "0.3.1"
edition = "2021"
description = "DMG + HFS+/APFS + PKG + PBZX pipeline - walk through Apple disk images to extract packages"
license = "MIT"
repository = "https://github.com/Dil4rd/dpp"
keywords = ["dmg", "apple", "macos", "pkg", "filesystem"]
categories = ["compression", "encoding", "parsing"]

[dependencies]
udif = { version = "0.2.0", path = "../udif" }
pbzx = { version = "0.2.0", path = "../pbzx" }
hfsplus = { version = "0.2.0", path = "../hfsplus" }
apfs = { version = "0.2.0", path = "../apfs" }
xara = { version = "0.2.0", path = "../xara" }
thiserror = "2"
tempfile = "3"

[features]
parallel = ["pbzx/parallel"]
