[package]
name = "hfsplus"
version = "0.2.0"
edition = "2021"
description = "Read-only HFS+ / HFSX filesystem parser"
license = "MIT"
repository = "https://github.com/Dil4rd/dpp"
keywords = ["hfs", "hfsplus", "apple", "macos", "filesystem"]
categories = ["parsing", "filesystem"]

[dependencies]
byteorder = "1.5"
thiserror = "2"
