[package]
name = "udif"
version = "0.2.0"
edition = "2021"
description = "cross-platform Apple disk image (aka DMG, UDIF) library"
license = "MIT"
repository = "https://github.com/Dil4rd/dpp"
keywords = ["dmg", "apple", "macos", "disk-image", "udif"]
categories = ["compression", "encoding", "parsing"]

[dependencies]
thiserror = "2"
byteorder = "1.5"
flate2 = "1.0"
bzip2 = "0.5"
lzfse = "0.2"
plist = "1"
base64 = "0.22"
xml-rs = "0.8"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["extract", "list", "create"]
extract = []
list = []
create = []

[[example]]
name = "udif-tool"
path = "examples/udif-tool.rs"
