[package]
name = "xara"
version = "0.2.0"
edition = "2024"
description = "Read-only XAR archive and macOS PKG package parser"
license = "MIT"
repository = "https://github.com/Dil4rd/dpp"
keywords = ["xar", "pkg", "apple", "macos", "archive"]
categories = ["parsing", "compression"]

[dependencies]
byteorder = "1.5"
thiserror = "2"
flate2 = "1.0"
quick-xml = "0.37"
